--- a/src/app/handcrafters/handcrafters.component.css
+++ b/src/app/handcrafters/handcrafters.component.css
@@ -1,48 +1,80 @@
-/* HeroesComponent's private CSS styles */
-.selected {
-  background-color: #CFD8DC !important;
-  color: white;
+/* DashboardComponent's private CSS styles */
+
+.handcrafter{
+  padding-top: 90px;
+  padding-bottom: 20px;
+
+
 }
-.handcrafters {
-  margin: 0 0 2em 0;
-  list-style-type: none;
-  padding: 0;
-  width: 15em;
+.page_title{
+    margin-bottom: 40px;
 }
-.handcrafters li {
-  cursor: pointer;
+
+[class*='col-'] {
+  float: left;
+  padding-right: 20px;
+  padding-left: 20px;
+  padding-bottom: 40px;
+
+}
+[class*='col-']:last-of-type {
+  padding-right: 0;
+}
+a {
+  text-decoration: none;
+}
+*, *:after, *:before {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+h3 {
+  text-align: center; margin-bottom: 0;
+}
+h5{
   position: relative;
-  left: 0;
-  background-color: #EEE;
-  margin: .5em;
-  padding: .3em 0;
-  height: 1.6em;
-  border-radius: 4px;
 }
-.handcrafters li.selected:hover {
-  background-color: #BBD8DC !important;
-  color: white;
+.grid {
+  margin: 0;
 }
-.handcrafters li:hover {
-  color: #607D8B;
-  background-color: #DDD;
-  left: .1em;
+.grid-pad {
+  padding: 10px 0;
 }
-.handcrafters .text {
-  position: relative;
-  top: -3px;
+.grid-pad > [class*='col-']:last-of-type {
+  padding-right: 20px;
 }
-.handcrafters .badge {
-  display: inline-block;
-  font-size: small;
-  color: white;
-  padding: 0.8em 0.7em 0 0.7em;
+.col-1-4 {
+  width: 25%;
+  text-decoration: none;
+}
+.module {
+  padding: 20px;
+  text-align: center;
+  color: #eee;
+  max-height: 120px;
+  min-width: 120px;
   background-color: #607D8B;
-  line-height: 1em;
-  position: relative;
-  left: -1px;
-  top: -4px;
-  height: 1.8em;
-  margin-right: .8em;
-  border-radius: 4px 0 0 4px;
+  border-radius: 2px;
+  text-decoration: none;
 }
+.module:hover {
+  background-color:white;
+  cursor: pointer;
+  color: #607d8b;
+  text-decoration: none;
+}
+
+@media (max-width: 600px) {
+  .module {
+    font-size: 10px;
+    max-height: 75px; }
+}
+@media (max-width: 1024px) {
+  .grid {
+    margin: 0;
+  }
+  .module {
+    min-width: 60px;
+  }
+}
+
