--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,124 +1,118 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <html lang="en">
-  <head>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../../../favicon.ico">
-    <title>{{title}}</title>
-  </head>
-  <body>
-  <nav class="navbar navbar-expand-md fixed-top">
-     <a class="navbar-brand" href="#"><img src="assets/img/handcrafters_log.png" width="150" ></a>
-      <button class="navbar-toggler collapsed" type="button" (click)="toggleNavbar = !toggleNavbar" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation" >
-      <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="navbar-collapse collapse" id="navbarCollapse" [ngbCollapse]="!toggleNavbar" style="">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-        <div ngbDropdown class="d-inline-block">
-		      <a class="nav-link" ngbDropdownToggle routerLink="/dashboard">Shots<span class="sr-only">(current)</span></a>
-		        <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-		           <button class="dropdown-item">Popular shots</button>
-		           <button class="dropdown-item">Recent shots</button>
-		        </div>
-	          </div>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/handcrafters">Designers</a>
-          </li>
-        </ul>
-        <ul class="navbar-nav mr-auto float-lg-right">
-              <li>
-                <a class="nav-link" href="../navbar-static-top/" routerLink="/user/mrpizza">My profile</a></li>
-              <li>
-              	<a class="nav-link" href="../navbar-static-top/">Sign up</a></li>
-              <li>
-              	<a class="nav-link" href="../navbar-fixed-top/">Sign in</a></li>
-             </ul>
-        <form class="form-inline  d-inline-block mt-2 mt-md-0">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-<!--           <input class="form-control" type="text" placeholder="Search"> -->
-<!--           <button class="btn btn btn btn-outline-light  my-2 my-sm-0" type="submit">Search</button> -->
-        </form>
-      </div>
-
-    </nav>
-<div id="wrap"> 
-  <div class="row wrap-inner">
-    <div class="col-12">
-      <h4>What are you working on? Dribbble is where designers get inspired and hired.</h4>
-    </div>
-    <div class="col-12">
-      <button type="button" class="btn btn-outline-light">Light</button>
-    </div>
-  </div>
-  <div class=" row wrap-inner-menu">
-    <div class=col-12>
-      <div ngbDropdown class="d-inline-block">
-        <a class="nav-link menu_link_2" ngbDropdownToggle routerLink="/dashboard">Popular<span class="sr-only">(current)</span></a>
-        <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-          <button class="dropdown-item">Recent</button>
-          <button class="dropdown-item">Most viewed</button>
-          <button class="dropdown-item">Most comented</button>
-        </div>
-      </div>
-      <div ngbDropdown class="d-inline-block">
-        <a class="nav-link menu_link_2" ngbDropdownToggle routerLink="/dashboard">Shots<span class="sr-only">(current)</span></a>
-        <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-          <button class="dropdown-item">Debuts</button>
-        </div>
-      </div>
-      <div ngbDropdown class="d-inline-block">
-        <a class="nav-link menu_link_2" ngbDropdownToggle routerLink="/dashboard">Now<span class="sr-only">(current)</span></a>
-        <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-          <button class="dropdown-item">Recent</button>
-          <button class="dropdown-item">Most viewed</button>
-          <button class="dropdown-item">Most comented</button>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-    <router-outlet></router-outlet>
-
-
-    <footer class="container py-5">
-      <div class="row">
-       	<div class="col-12 col-md">
-           <a class="navbar-brand logo_footer" href="#"><img src="assets/img/handcrafters_log.png" width="100" ></a>
-          <small class="d-block mb-3 text-muted">© 2018</small>
-        </div>
-        <div class="col-6 col-md">
-          <h5>Shots</h5>
-          <ul class="list-unstyled text-small">
-            <li><a class="text-muted" href="#">Cool stuff</a></li>
-          </ul>
-        </div>
-        <div class="col-6 col-md">
-          <h5>Resources</h5>
-          <ul class="list-unstyled text-small">
-            <li><a class="text-muted" href="#">Popular shots</a></li>
-            <li><a class="text-muted" href="#">Recent shots</a></li>
-          </ul>
-        </div>
-        <div class="col-6 col-md">
-          <h5>Designers</h5>
-          <ul class="list-unstyled text-small">
-          </ul>
-        </div>
-        <div class="col-6 col-md">
-          <h5>About</h5>
-          <ul class="list-unstyled text-small">
-            <li><a class="text-muted" href="#">Team</a></li>
-          </ul>
-        </div>
-      </div>
-    </footer>
-</body></html>
+	<head>
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<meta name="description" content="">
+		<meta name="author" content="">
+		<link rel="icon" href="../../../../favicon.ico">
+		<title>{{title}}</title>
+	</head>
+	<body>
+		<nav class="navbar navbar-expand-md fixed-top">
+			<a class="navbar-brand" href="#"><img src="assets/img/handcrafters_log.png" width="150" ></a>
+			<button class="navbar-toggler collapsed" type="button" (click)="toggleNavbar = !toggleNavbar" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="navbar-collapse collapse" id="navbarCollapse" [ngbCollapse]="!toggleNavbar">
+				<ul class="navbar-nav mr-auto">
+					<li class="nav-item active">
+						<div ngbDropdown class="d-inline-block">
+							<a class="nav-link" ngbDropdownToggle routerLink="/dashboard">Shots
+								<span class="sr-only">(current)</span>
+							</a>
+							<div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+								<button class="dropdown-item">Popular shots</button>
+								<button class="dropdown-item">Recent shots</button>
+							</div>
+						</div>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" routerLink="/handcrafters">Designers</a>
+					</li>
+				</ul>
+				<ul class="navbar-nav mr-auto float-lg-right">
+					<li>
+						<a class="nav-link" href="../navbar-static-top/" routerLink="/myaccount">My profile</a></li>
+					<li>
+						<a class="nav-link" href="../navbar-static-top/">Sign up</a></li>
+					<li>
+						<a class="nav-link" href="../navbar-fixed-top/">Sign in</a></li>
+				</ul>
+			</div>
+		</nav>
+		<div id="wrap"> 
+			<div class="row wrap-inner">
+				<div class="col-12">
+					<h4>What are you working on? Handcrafters is where designers get inspired and hired.</h4>
+				</div>
+			</div>
+			<div class=" row wrap-inner-menu">
+				<div class=col-12>
+					<div ngbDropdown class="d-inline-block">
+						<a class="nav-link menu_link_2" ngbDropdownToggle routerLink="/dashboard">Popular<span class="sr-only">(current)</span>
+						</a>
+						<div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+							<button class="dropdown-item">Recent</button>
+							<button class="dropdown-item">Most viewed</button>
+							<button class="dropdown-item">Most comented</button>
+						</div>
+					</div>
+					<div ngbDropdown class="d-inline-block">
+						<a class="nav-link menu_link_2" ngbDropdownToggle routerLink="/dashboard">Shots<span class="sr-only">(current)</span></a>
+						<div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+							<button class="dropdown-item">Debuts</button>
+						</div>
+					</div>
+					<div ngbDropdown class="d-inline-block">
+						<a class="nav-link menu_link_2" ngbDropdownToggle routerLink="/dashboard">Now<span class="sr-only">(current)</span>
+						</a>
+						<div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+							<button class="dropdown-item">Recent</button>
+							<button class="dropdown-item">Most viewed</button>
+							<button class="dropdown-item">Most comented</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<router-outlet></router-outlet>
+		<footer class="container py-5">
+			<div class="row">
+				<div class="col-12 col-md">
+					<a class="navbar-brand logo_footer" href="#"><img src="assets/img/handcrafters_log.png" width="100" >
+					</a>
+					<small class="d-block mb-3 text-muted">© 2018</small>
+				</div>
+				<div class="col-6 col-md">
+					<h5>Shots</h5>
+					<ul class="list-unstyled text-small">
+						<li><a class="text-muted" href="#">Cool stuff</a></li>
+					</ul>
+				</div>
+				<div class="col-6 col-md">
+					<h5>Resources</h5>
+					<ul class="list-unstyled text-small">
+						<li><a class="text-muted" href="#">Popular shots</a></li>
+						<li><a class="text-muted" href="#">Recent shots</a></li>
+					</ul>
+				</div>
+				<div class="col-6 col-md">
+					<h5>Designers</h5>
+					<ul class="list-unstyled text-small">
+					</ul>
+				</div>
+				<div class="col-6 col-md">
+					<h5>About</h5>
+					<ul class="list-unstyled text-small">
+						<li><a class="text-muted" href="#">Team</a></li>
+					</ul>
+				</div>
+			</div>
+		</footer>
+	</body>
+</html>
 
 
 
