--- a/src/app/handcrafter-detail/handcrafter-detail.component.html
+++ b/src/app/handcrafter-detail/handcrafter-detail.component.html
@@ -1,10 +1,36 @@
-<div *ngIf="handcrafter">
-  <h2>{{handcrafter.name | uppercase}} Details</h2>
-  <div><span>id: </span>{{handcrafter.id}}</div>
-  <div>
-    <label>name:
-      <input [(ngModel)]="handcrafter.name" placeholder="name"/>
-    </label>
-  </div>
-<button (click)="goBack()">go back</button>
+
+<div class="container" id="handcrafter-detail">
+	<div class=" row ">
+  		<div class="col col-md-4 text-center">
+  			<div id="profile-info" class="col-right col-right-top">
+				<div *ngIf="handcrafter">
+					<ul class= "list-group">
+						<li class="list-group-item" class="user_avatar"><img src="{{handcrafter.avatar}}" class="rounded-circle" width="50"></li>
+		  				<li class="list-group-item"><h2>{{handcrafter.name}}</h2></li>
+		  				<li class="list-group-item"><a><h4>{{handcrafter.city}}</h4></a></li>
+		  				<li class="list-group-item user_email" ><a>{{handcrafter.email}}</a></li>
+						<li class="list-group-item" class="user_description"><a>{{handcrafter.user_description}}</a>
+
+						<li class="list-group-item" ><a class="message-btn "  href="" original-title="Send a message about a work opportunity"> <span>Message</span></a></li>
+						<li class="list-group-item" class="creation_date"><a><h5>Creation date: {{handcrafter.creation_date}}</h5></a>
+						<li class="list-group-item" class="last_login"><a><h5>Last login: {{handcrafter.last_login}}</h5></a>
+					</ul>
+				</div>
+			</div>
+			<div id="profile-skills" class="col-right">
+				<h3>Skills</h3>
+				<li class="list-group-item" class="last_login"><a>{{handcrafter.skills}}</a>
+			</div>
+			<div id="profile-elsewhere" class="col-right col-right-bottom">
+				<h3>Elsewhere</h3>
+			</div>
+		</div>	
+		<div class="col-md-8 handcrafter-shots"> 
+			<app-handcrafter-detail-shots [handcrafter]="handcrafter"></app-handcrafter-detail-shots>
+
+		</div>
+	</div>
 </div>
+
+
+
