--- a/src/app/user-page/user-page.component.html
+++ b/src/app/user-page/user-page.component.html
@@ -1,13 +1,145 @@
-<p>
-  user-page works!
-</p>
-<div *ngIf="handcrafter">
-  <h2>{{handcrafter.login | uppercase}} Details</h2>
-  <div><span>id: </span>{{handcrafter.id}}</div>
-  <div>
-    <label>name:
-      <input [(ngModel)]="handcrafter.name" placeholder="name"/>
-    </label>
-  </div>
-<button (click)="goBack()">go back</button>
+<div class="container user-page">
+    <div class=" row  user-header">
+        <div class="col col-md-1 ">
+            <a class="url user-sm-avatar" rel="contact" >
+                <picture>
+                    <img class="photo rounded-circle" alt="Cinque Terre" width="50" height="50" src="assets/img/user_avatar.jpg">
+                </picture>
+            </a>
+        </div>
+        <div class="col col-sm-4">
+            <span class="header-user-name"><a routerLink="/user-page/{{user.id}}">{{user.name}}</a>/</span> Profile<br>Edit your name, avatar, etc.
+        </div>
+    </div>
+    <div class= "row main-row-user">
+        <div class="col-md-3 user-menu">
+            <ul class="vertical-sidenav account-menu ">
+                <li class="active">
+                    <a (click)=" changeSettingsPage(0)">Profile</a>
+                </li>
+                <li>
+                    <a (click)=" changeSettingsPage(1)">Password</a>
+                </li>
+                <li><a (click)=" changeSettingsPage(2)">Your shots</a></li>
+                <li><a (click)=" changeSettingsPage(3)">Add shot</a></li>
+            </ul>
+        </div>
+        <div class="col-md-8">
+            <div class="main_user_page">
+                <div [ngSwitch]="this.settingsPage">
+                  <div *ngSwitchDefault [hidden]="submitted">
+                    <form id="avatar-form" class="group" enctype="multipart/form-data" action="/account/avatar" accept-charset="UTF-8" method="post">
+                         <picture>
+                            <img class="photo rounded-circle" alt="Cinque Terre" width="50" height="50" src="assets/img/user_avatar.jpg">
+                        </picture>
+                        <fieldset id="upload">
+                                <input size="30" type="file" name="user[avatar]" id="user_avatar">
+                                <p class="info">JPG, GIF or PNG. Max size of 800K</p>
+                        </fieldset>
+                        <button type="submit" class="btn btn-success" (click)="save()">Upload now</button>
+                    </form>
+                    <h1>user form</h1>
+                    <form (ngSubmit)="onSubmit()" #userForm="ngForm">
+                        <div class="form-group">
+                            <label for="name">Name</label>
+                            <input type="text" class="form-control" id="name"
+                                   required
+                                   [(ngModel)]="user.name" name="name"
+                                   #name="ngModel">
+                            <div [hidden]="name.valid || name.pristine"
+                                 class="alert alert-danger">
+                              Name is required
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="surname">Surname</label>
+                            <input type="text" class="form-control" id="surname"
+                                   required
+                                   [(ngModel)]="user.surname" name="surname"
+                                   #surname="ngModel">
+                            <div [hidden]="surname.valid || surname.pristine"
+                                 class="alert alert-danger">
+                              Surname is required
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="login">User name</label>
+                            <input type="text" class="form-control" id="login"
+                                   required
+                                   [(ngModel)]="user.login" name="login"
+                                   #login="ngModel">
+                            <div [hidden]="login.valid || login.pristine"
+                                 class="alert alert-danger">
+                              Login is required
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Email</label>
+                            <input type="text" class="form-control" id="email"
+                                   required
+                                   [(ngModel)]="user.email" name="email"
+                                   #email="ngModel">
+                            <div [hidden]="email.valid || email.pristine"
+                                 class="alert alert-danger">
+                              Login is required
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Location</label>
+                            <input type="text" class="form-control" id="city"
+                                   required
+                                   [(ngModel)]="user.city" name="city"
+                                   #city="ngModel">
+                            <div [hidden]="email.valid || city.pristine"
+                                 class="alert alert-danger">
+                              Location is required
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="description">Description</label>
+                            <textarea class="form-control" id="description"
+                                    required
+                                    [(ngModel)]="user.user_description" name="user_description"
+                                    #description="ngModel">
+                            </textarea> 
+                        </div>
+                        <button type="submit" class="btn btn-success" (click)="save()">Save changes</button>
+                    </form>
+                  </div>
+
+                   <form *ngSwitchCase='1' (ngSubmit)="onSubmit()" #userForm="ngForm">
+                      <div class="form-group">
+                        <label for="name">Old password</label>
+                        <input type="password" class="form-control" id="password"
+                               required
+                               [(ngModel)]="user.password" name="password"
+                               #password="ngModel">
+                        <div [hidden]="password.valid || name.pristine"
+                             class="alert alert-danger">
+                             It can't be empty.
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label for="surname">New password</label>
+                        <input type="password" class="form-control" id="surname"
+                               required
+                               [(ngModel)]="user.password" name="surname"
+                               #password="ngModel">
+                        <div [hidden]="password.valid || surname.pristine"
+                             class="alert alert-danger">
+                            Minimum 6 characters
+                        </div>
+                        <p class="message">Minimum 6 characters</p>
+                      </div>
+                   
+                    </form>
+                    <app-handcrafter-detail-shots *ngSwitchCase='2' [handcrafter]="user"></app-handcrafter-detail-shots>
+                    <app-new-shot *ngSwitchCase='3'></app-new-shot>
+                </div>
+
+
+            </div>
+
+        </div>
+    </div>
 </div>
