--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -25,7 +25,7 @@
     border-width: 8px;
     border-color: white;
     overflow: hidden;
-
+    max-height: 200px;
 }
 .inner-box-top >a{
     display: none;
@@ -35,6 +35,7 @@
     color: #444;
     height: 100%;
     font-size: 0.8em;
+    width: 100%;
 }
 .short_description{
     line-height: 1.5em;
@@ -52,6 +53,7 @@
 .inner-box-top img{
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 .inner-box-top p{
     font-weight: bold;
