--- a/src/app/handcrafter-detail-shots/handcrafter-detail-shots.component.css
+++ b/src/app/handcrafter-detail-shots/handcrafter-detail-shots.component.css
@@ -16,6 +16,7 @@
     border-width: 8px;
     border-color: white;
     overflow: hidden;
+    max-height: 200px;
 }
 .inner-box-top >a{
     display: none;
@@ -25,6 +26,7 @@
     color: #444;
     font-size: 0.8em;
     height: 100%;
+    width: 100%;
 }
 .short_description{
     line-height: 1em;
@@ -41,6 +43,7 @@
 .inner-box-top img{
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 .inner-box-top p{
     font-weight: bold;
