--- a/src/app/new-shot/new-shot.component.html
+++ b/src/app/new-shot/new-shot.component.html
@@ -1,54 +1,23 @@
 <div class="container">
   <div [hidden]="submitted">
     <h1>New shot form</h1>
-    <form (ngSubmit)="onSubmit()" #shotForm="ngForm">
-      <div class="form-group">
-        <label for="name">Name</label>
-        <input type="text" class="form-control" id="name"
-               required
-               [(ngModel)]="model.name" name="name"
-               #name="ngModel">
-        <div [hidden]="name.valid || name.pristine"
-             class="alert alert-danger">
-          Name is required
-        </div>
-      </div>
- 
-      <div class="form-group">
-        <label for="url">URL</label>
-        <input type="text" class="form-control" id="url"
-               [(ngModel)]="model.url" name="url">
-      </div>
- 
-      <div class="form-group">
-        <label for="description">Description</label>
-        <textarea class="form-control" id="description"
-                required
-                [(ngModel)]="model.power" name="description"
-                #description="ngModel">
-        </textarea> 
-      </div>
- 
-      <button type="submit" class="btn btn-success" [disabled]="!shotForm.form.valid">Submit</button>
-      <button type="button" class="btn btn-default" (click)="newShot(); shotForm.reset()">New Shot</button>
-    </form>
+    <div class="form-group">
+      <label for="name">Name</label>
+      <input type="text" class="form-control" id="name" required #shotName>
+    </div>
+
+    <div class="form-group">
+      <label for="url">URL</label>
+      <input type="file" class="form-control" id="url" required #shotURL>
+    </div>
+
+    <div class="form-group">
+      <label for="description">Description</label>
+      <textarea class="form-control" id="description" required #shotDescription></textarea> 
+    </div>    
+    <button type="submit" class="btn btn-success" (click)="onSubmit(shotName.value, shotURL.value, shotDescription.value)">Submit</button>
   </div>
- 
   <div [hidden]="!submitted">
-    <h2>You submitted the following:</h2>
-    <div class="row">
-      <div class="col-xs-3">Name</div>
-      <div class="col-xs-9  pull-left">{{ model.name }}</div>
-    </div>
-    <div class="row">
-      <div class="col-xs-3">Alter Ego</div>
-      <div class="col-xs-9 pull-left">{{ model.url }}</div>
-    </div>
-    <div class="row">
-      <div class="col-xs-3">Power</div>
-      <div class="col-xs-9 pull-left">{{ model.description }}</div>
-    </div>
-    <br>
-    <button class="btn btn-primary" (click)="submitted=false">Edit</button>
+    Your image was submited with success.
   </div>
 </div>
